--- a/_gulp/index.html
+++ b/_gulp/index.html
@@ -11,6 +11,8 @@
 
   <ol>
     <li><a target="_blank" href="./dist/index.html">Главная</a></li>
+    <li><a target="_blank" href="./dist/1-news.html">1 новость</a></li>
+    <li><a target="_blank" href="./dist/services.html">Наши услуги</a></li>
   </ol>
   
   <style>
