--- a/_gulp/index.html
+++ b/_gulp/index.html
@@ -14,6 +14,7 @@
     <li><a target="_blank" href="./dist/news.html">Новости и акции</a></li>
     <li><a target="_blank" href="./dist/1-news.html">1 новость</a></li>
     <li><a target="_blank" href="./dist/services.html">Наши услуги</a></li>
+    <li><a target="_blank" href="./dist/1-services.html">1 услуга</a></li>
     <li><a target="_blank" href="./dist/our-team.html">Наша команда</a></li>
   </ol>
   
