--- a/_gulp/index.html
+++ b/_gulp/index.html
@@ -15,6 +15,8 @@
     <li><a target="_blank" href="./dist/1-news.html">1 новость</a></li>
     <li><a target="_blank" href="./dist/services.html">Наши услуги</a></li>
     <li><a target="_blank" href="./dist/1-services.html">1 услуга</a></li>
+    <li><a target="_blank" href="./dist/1-services-index.html">1 услуга - Подология</a></li>
+    <li><a target="_blank" href="./dist/1-services-index-2.html">1 услуга - Акне</a></li>
     <li><a target="_blank" href="./dist/our-team.html">Наша команда</a></li>
   </ol>
   
