--- a/_gulp/index.html
+++ b/_gulp/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>Список шаблонов проекта</title>
+  <title>Шаблоны проекта Визави</title>
 </head>
 <body>
 
-  <h2>Список шаблонов проекта</h2>
+  <h2>Шаблоны проекта Визыви</h2>
 
   <ol>
     <li><a target="_blank" href="./dist/index.html">Главная</a></li>
@@ -18,6 +18,8 @@
     <li><a target="_blank" href="./dist/1-services-index.html">1 услуга - Подология</a></li>
     <li><a target="_blank" href="./dist/1-services-index-2.html">1 услуга - Акне</a></li>
     <li><a target="_blank" href="./dist/our-team.html">Наша команда</a></li>
+    <li><a target="_blank" href="./dist/recommendations.html">Рекоммендации</a></li>
+    <li><a target="_blank" href="./dist/1-prices-index.html">Цены дерматолог</a></li>
   </ol>
   
   <style>
