--- a/_gulp/index.html
+++ b/_gulp/index.html
@@ -20,6 +20,7 @@
     <li><a target="_blank" href="./dist/our-team.html">Наша команда</a></li>
     <li><a target="_blank" href="./dist/recommendations.html">Рекоммендации</a></li>
     <li><a target="_blank" href="./dist/1-prices-index.html">Цены дерматолог</a></li>
+    <li><a target="_blank" href="./dist/gallery.html">Фотогалерея</a></li>
   </ol>
   
   <style>
