--- a/_gulp/index.html
+++ b/_gulp/index.html
@@ -22,6 +22,7 @@
     <li><a target="_blank" href="./dist/1-prices-index.html">Цены дерматолог</a></li>
     <li><a target="_blank" href="./dist/gallery.html">Фотогалерея</a></li>
     <li><a target="_blank" href="./dist/gallery.html">Лицензии и сертификаты</a></li>
+    <li><a target="_blank" href="./dist/vacancys.html">Вакансии</a></li>
   </ol>
   
   <style>
