--- a/_gulp/index.html
+++ b/_gulp/index.html
@@ -19,10 +19,11 @@
     <li><a target="_blank" href="./dist/1-services-index-2.html">1 услуга - Акне</a></li>
     <li><a target="_blank" href="./dist/our-team.html">Наша команда</a></li>
     <li><a target="_blank" href="./dist/recommendations.html">Рекоммендации</a></li>
-    <li><a target="_blank" href="./dist/1-prices-index.html">Цены дерматолог</a></li>
     <li><a target="_blank" href="./dist/gallery.html">Фотогалерея</a></li>
     <li><a target="_blank" href="./dist/gallery.html">Лицензии и сертификаты</a></li>
     <li><a target="_blank" href="./dist/vacancys.html">Вакансии</a></li>
+    <li><a target="_blank" href="./dist/prices.html">Цены</a></li>
+    <li><a target="_blank" href="./dist/1-prices-index.html">Цены дерматолог</a></li>
   </ol>
   
   <style>
