--- a/_gulp/index.html
+++ b/_gulp/index.html
@@ -24,6 +24,7 @@
     <li><a target="_blank" href="./dist/vacancys.html">Вакансии</a></li>
     <li><a target="_blank" href="./dist/prices.html">Цены</a></li>
     <li><a target="_blank" href="./dist/1-prices-index.html">Цены дерматолог</a></li>
+    <li><a target="_blank" href="./dist/contacts.html">Контакты</a></li>
   </ol>
   
   <style>
