--- a/_gulp/index.html
+++ b/_gulp/index.html
@@ -11,6 +11,7 @@
 
   <ol>
     <li><a target="_blank" href="./dist/index.html">Главная</a></li>
+    <li><a target="_blank" href="./dist/about-us.html">О нас</a></li>
     <li><a target="_blank" href="./dist/news.html">Новости и акции</a></li>
     <li><a target="_blank" href="./dist/1-news.html">1 новость</a></li>
     <li><a target="_blank" href="./dist/services.html">Наши услуги</a></li>
